@@ -1,4 +1,4 @@
-/* $Id: poll.css,v 1.6 2008/01/22 07:47:57 goba Exp $ */
+/* $Id: poll.css,v 1.7 2008/05/15 20:55:58 dries Exp $ */
 
 .poll .bar {
   height: 1em;
@@ -32,6 +32,14 @@
 }
 .node-form #edit-poll-more {
   margin: 0;
+}
+.node-form #poll-choice-table .form-text {
+  display: inline;
+  width: auto;
+}
+.node-form #poll-choice-table td.choice-flag {
+  white-space: nowrap;
+  width: 4em;
 }
 td.poll-chtext {
   width: 80%;
