@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.266 2008/05/07 07:05:55 dries Exp $
+// $Id: CHANGELOG.txt,v 1.267 2008/05/15 20:56:48 dries Exp $
 
 Drupal 7.0, xxxx-xx-xx (development version)
 ----------------------
@@ -10,6 +10,7 @@ Drupal 7.0, xxxx-xx-xx (development version)
       hashing and authentication schemes.
 - Usability:
     * Implemented drag-and-drop positioning for input format listings.
+    * Implemented drag-and-drop positioning for poll options.
     * Provided descriptions for user permissions.
 - Search:
     * Added support for language-aware searches.
